--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://kharismaaufa.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "framer-motion": "^8.4.3",
+    "gh-pages": "^5.0.0",
     "react-countup": "^6.4.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
